-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0
-
Lustre client arch: ppc64
Lustre server arch: x86_64
-
3
-
9223372036854775807
sanity test 102a failed on ppc64 client as follows:
== sanity test 102a: user xattr test ================================================================= 20:53:16 (1563828796) set/get xattr... trusted.name1="value1" user.author1="author1" listxattr... remove xattr... set lustre special xattr ... lfs setstripe: setstripe error for '/mnt/lustre/f102a.sanity': stripe already set getfattr: Removing leading '/' from absolute path names setfattr: /mnt/lustre/f102a.sanity: Numerical result out of range sanity test_102a: @@@@@@ FAIL: /mnt/lustre/f102a.sanity doesn't ignore setting trusted.lov again
sanity tests 17k, 102{b,c,d,f,j,n} failed with the same issue:
https://testing.whamcloud.com/test_sets/7e0c5696-acc8-11e9-8fc1-52540065bddc